--- a/Login-Pages.html
+++ b/Login-Pages.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Page</title>
-  <link rel="stylesheet" href="/assets/css/Login-style.css">
+  <link rel="stylesheet" href="/css/Login-style.css">
 </head>
 <body>
   <div class="background-video">
     <video autoplay muted loop playsinline>
-      <source src="../assets/img/169951-842348732_small.mp4" type="video/mp4"> 
+      <source src="../img/169951-842348732_small.mp4" type="video/mp4"> 
     </video>
   </div>
   <div class="background">
